# pgContext

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  META.json  Makefile  NOTICE  README.md  SECURITY.md  deny.toml  pgcontext_pgvector.control
crates/context-core/: Cargo.toml
crates/context-core/proptest-regressions/: metric_kernels.txt
crates/context-core/src/: catalog.rs  error.rs  exact.rs  identity.rs  lib.rs  metric.rs  metric_kernels.rs  policy.rs  scroll.rs  vector.rs
crates/context-core/tests/: bit_vector.rs  catalog.rs  context_error.rs  dense_vector.rs  half_vector.rs  metric_properties.rs  policy.rs  scroll_cursor.rs  scroll_cursor_properties.rs  sparse_vector.rs  vector_conversion_policy.rs  vector_properties.rs
crates/context-pg/: Cargo.toml  pgcontext.control
crates/context-pg/src/: artifact_segments.rs  artifact_segments_file_cleanup.rs  artifact_segments_results.rs  build_jobs.rs  catalog.rs  catalog_schema.rs  collection_aliases.rs  collection_limits.rs  contract.rs  domain_types.rs  embedding_migrations.rs  error.rs  hnsw_am.rs  hnsw_am_callbacks.rs  hnsw_am_compaction.rs  hnsw_am_graph_read.rs  hnsw_am_graph_scan.rs  hnsw_am_metapage.rs  hnsw_am_metric.rs  hnsw_am_packed_cache.rs  hnsw_am_page_storage.rs  hnsw_am_scan_callbacks.rs  hnsw_am_validation.rs  hybrid_query.rs  late_interaction.rs  late_interaction_catalog.rs  late_interaction_catalog_schema.rs  lib.rs  model_versions.rs  operations.rs  payload_catalog.rs  payload_mutations.rs  pg_test.rs  pgvector_compat.rs  pgvector_ownership.rs  pgvector_ownership_catalog.rs  points.rs  quantization_sql.rs  query_builders.rs  query_stats.rs  (+13 more)
crates/context-pg/src/artifact_segments/: diagnostics.rs  persistence.rs  quantization.rs  serving_readiness.rs
crates/context-pg/src/build_jobs/: backend_identity.rs  build_job_types.rs  build_job_validation.rs  persistence.rs
crates/context-pg/src/contract/: contract_catalog_objects.rs  contract_objects.rs  contract_pgvector_ownership_objects.rs
crates/context-pg/src/hnsw_am/: bitmap.rs  callback_contract.rs  ffi_boundary.rs  mapped_files.rs  mapped_lifecycle.rs  mvcc_contract.rs  options.rs  page_codec.rs  shared_registry.rs  sql_contract.rs  storage.rs  tests.rs  tests_serving.rs  unsafe_inventory.data  vacuum.rs  wal_contract.rs
crates/context-pg/src/hnsw_am/mvcc_contract/: tests.rs
crates/context-pg/src/hybrid_query/: candidate_hydration.rs  catalog.rs  late_interaction.rs  late_interaction_ann.rs
crates/context-pg/src/operations/: advisor.rs  value_helpers.rs
crates/context-pg/src/pg_tests/: acl_denial.rs  artifact_build_rls.rs  artifact_quantization_policy.rs  artifact_segment_diagnostics.rs  artifact_segment_hnsw_payload.rs  artifact_segment_retire_cleanup.rs  artifact_segment_serving_readiness.rs  artifact_segments.rs  artifact_segments_helpers.rs  bitvec_compatibility.rs  build_job_helpers.rs  build_jobs.rs  build_jobs_acl.rs  client_examples.rs  collection_aliases.rs  collection_catalog.rs  collection_limits.rs  contract.rs  count.rs  default_privileges.rs  discovery.rs  embedding_migrations.rs  exact_oracle.rs  facet.rs  grouped_search.rs  hnsw_am.rs  hnsw_compaction.rs  hnsw_delta_segment.rs  hnsw_pgvector_compat.rs  hnsw_scan_policy.rs  hnsw_serving.rs  hybrid_query.rs  hybrid_sparse_cosine.rs  index_advisor.rs  late_interaction_ann.rs  late_interaction_owned.rs  late_interaction_planner.rs  membership_view_security.rs  model_versions.rs  multitenancy.rs  (+20 more)
crates/context-pg/src/pgvector_ownership/: execution.rs  index.rs  persistence.rs  trigger.rs  validation.rs
crates/context-pg/src/retrieval/: mod.rs  sparse.rs
crates/context-pg/src/table_search/: candidate_recheck.rs  catalog_access.rs  grouped.rs  named.rs  recommend.rs  support.rs
crates/context-pg/src/vector_catalog/: persistence.rs
crates/context-pg/src/vector_variants/: aggregate_helpers.rs  halfvec_datum.rs  pgvector_sparsevec_datum.rs  vector_variant_distance.rs
crates/context-query/: Cargo.toml
crates/context-query/src/: budget.rs  error.rs  executor.rs  formula.rs  ir.rs  lib.rs  plan.rs  policy.rs  ports.rs  strategy.rs  types.rs  validation.rs
crates/context-query/src/executor/: composite.rs
crates/context-query/tests/: application_policy.rs  composite_execution.rs  execution_ports.rs  filtered_ann_strategy.rs  formula.rs  multi_vector_ann_strategy.rs  query_types.rs
crates/context-storage/: Cargo.toml
crates/context-storage/src/: delta_segment.rs  hnsw_graph_payload.rs  lib.rs  mapped_packed_graph.rs  mmap_file.rs  packed_graph_image.rs
crates/context-storage/src/hnsw_graph_payload/: mapped_view.rs  quantization.rs  quantized_view.rs
crates/context-storage/tests/: delta_segment.rs  hnsw_graph_payload_adversarial.rs  mapped_generation_subprocess.rs  mapped_hnsw_view.rs  mapped_packed_graph.rs  packed_graph_image.rs  quantized_hnsw_view.rs  segment_format.rs  segment_properties.rs
crates/context-test/: Cargo.toml
crates/context-test/benches/: exact_search_baseline.rs  filtered_ann_baseline.rs  hnsw_baseline.rs  hybrid_baseline.rs  late_interaction_ann_baseline.rs  quantized_baseline.rs
crates/context-test/src/: late_interaction.rs  lib.rs
crates/context-test/tests/: benchmark_datasets.rs  recall_gates.rs
docs/: index.md  roadmap.md  (+6 more)
fuzz/: Cargo.toml  smoke-targets.txt
fuzz/corpus/cursor_state/: malformed-token.seed  minimal.seed
fuzz/corpus/filter_json/: basic_filter.json  deeply_nested_filter.json  huge_jsonb_path.json  nested_filter.json
fuzz/corpus/hnsw_graph_ops/: basic.ops  levels.ops
fuzz/corpus/hnsw_page/: basic.page
fuzz/corpus/quantized_codes/: truncated_v2.seed
fuzz/corpus/query_plan/: basic.plan
fuzz/corpus/sql_predicate/: jsonb_path_value.json  range_and_any.json
fuzz/corpus/vector_text/: dense.vec  halfvec.vec  oversized_sparse_index.vec  sparsevec.vec
fuzz/fuzz_targets/: candidate_mask.rs  cursor_state.rs  filter_json.rs  hnsw_graph_ops.rs  hnsw_page.rs  quantized_codes.rs  query_plan.rs  segment_loader.rs  sql_predicate.rs  vector_text.rs
(+287 files in other folders)
