[workspace]
resolver = "3"
members = [
    "crates/context-core",
    "crates/context-build",
    "crates/context-filter",
    "crates/context-hybrid",
    "crates/context-index",
    "crates/context-query",
    "crates/context-storage",
    "crates/context-pg",
    "crates/context-test",
]

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"
repository = "https://github.com/evokoa/pgcontext"
homepage = "https://github.com/evokoa/pgcontext"
documentation = "https://github.com/evokoa/pgcontext/tree/master/docs"
keywords = ["postgres", "vector-search", "retrieval", "pgcontext"]
categories = ["database", "science"]

[workspace.dependencies]
pgrx = "=0.19.1"
pgrx-tests = "=0.19.1"
proptest = "1.11.0"
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
libc = "0.2.186"

[workspace.lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
panic = "warn"
print_stdout = "warn"
print_stderr = "warn"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
cast_precision_loss = "warn"

[workspace.metadata.pgcontext]
extension-name = "pgcontext"
pgrx-version = "0.19.1"
primary-postgres-version = "17"
supported-postgres-versions = ["17", "18"]
planned-postgres-versions = []
legacy-best-effort-postgres-versions = []
rust-toolchain = "1.96.0"
unsafe-opt-in-crates = ["context-core", "context-pg", "context-storage"]
