[package]
name = "context-query"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
context-core = { path = "../context-core", version = "0.1.0" }
context-filter = { path = "../context-filter", version = "0.1.0" }
context-hybrid = { path = "../context-hybrid", version = "0.1.0" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
